# word_cloud

./: .buildinfo  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  CITATION.cff  CONTRIBUTING.md  ISSUE_TEMPLATE.md  LICENSE  MANIFEST.in  Makefile  README.md  __init__.py  appveyor.yml  changelog.html  cli.html  genindex.html  index.html  make_a_release.html  np-modindex.html  objects.inv  py-modindex.html  pyproject.toml  query_integral_image.pyx  references.html  requirements-dev.txt  requirements.txt  scikit-ci.yml  search.html  searchindex.js  setheading.py  setup.cfg  setup.py  stopwords.txt  style.css  test.txt  text.file.txt  tox.ini  veneno.quantuminsert.git  versioneer.py  (+2 more)
.circleci/: config.yml
.codeboarding/: Coloring_Strategies.md  Layout_Engine.md  Text_Processing.md  on_boarding.md
_downloads/: a_new_hope.ipynb  a_new_hope.py  colored.ipynb  colored.py  colored_by_group.ipynb  emoji.ipynb  emoji.py  masked.ipynb  masked.py  simple.ipynb  simple.py  single_word.ipynb  wordcloud_cn.ipynb
_modules/: index.html  wordcloud.html
_sources/: changelog.rst.txt  cli.rst.txt  index.rst.txt  index.txt  make_a_release.rst.txt  references.txt
_static/: bootstrap-sphinx.css  bootstrap-sphinx.js  documentation_options.js  gallery.css  main.css  (+1 more)
wordcloud/: CMakeLists.txt  TODO  Unit_tests.py  __init__.py  __main__.py  _version.py  color_from_image.py  palette_from_image.py  query_integral_image.c  query_integral_image.py  query_integral_image.pyx  stopwords  stopwords.py  textreshaper.py  tokenization.py  util.py  wordcloud.py  wordcloud_cli.py
(+161 files in other folders)
